--- a/plugin.xml
+++ b/plugin.xml
@@ -111,8 +111,6 @@
 <source-file src="src/android/LibraryProject/res/drawable-xxhdpi/ic_launcher.png" target-dir="res/drawable-xxhdpi"/>
 <source-file src="src/android/LibraryProject/res/layout/activity_draw_with_touch.xml" target-dir="res/layout"/>
 <source-file src="src/android/LibraryProject/res/menu/main.xml" target-dir="res/menu"/>
-<source-file src="src/android/LibraryProject/res/values/dimens.xml" target-dir="res/values"/>
-<source-file src="src/android/LibraryProject/res/values/strings.xml" target-dir="res/values"/>
 <source-file src="src/android/LibraryProject/res/values/styles.xml" target-dir="res/values"/>
 <source-file src="src/android/LibraryProject/res/values-sw600dp/dimens.xml" target-dir="res/values-sw600dp"/>
 <source-file src="src/android/LibraryProject/res/values-sw720dp-land/dimens.xml" target-dir="res/values-sw720dp-land"/>
@@ -216,7 +214,7 @@
 
   <!-- plugman cannot merge - prepare manual merge -->
   
-    <config-file target="res/values/dimens.xml" parent="/resources">
+    <config-file target="res/values/strings.xml" parent="/resources">
       <string name="app_name">WacomInkingToolsConfiguratorForAndroid</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
